Fix Background video z-index.

--- a/src/sass/editor/_blocks-list.scss
+++ b/src/sass/editor/_blocks-list.scss
@@ -241,7 +241,7 @@
 	}
 
 	/*==== Inner Blocks Position Fix ====*/
-	.block-editor-block-list__block:not(.position-) > .block-editor-block-list__layout {position: static;}
+	.block-editor-block-list__block:not(.position-):not(.pds-video-bg) > .block-editor-block-list__layout {position: static;}
 	.wp-block-phenix-custom-code .form-control {
 		direction: ltr;
 		text-align: left;
@@ -283,8 +283,6 @@
 		
 		> img, > video, > iframe {pointer-events: none;}
 	}
-
-	.pds-video-bg > .block-editor-block-list__layout {position: relative; z-index: 1;}
 }
 
 /*==== Toolbar Fix 6.5 ====*/
